feat: amplia ground truth e adiciona contabilidade espacial da analise
